	* Fixed Slow and Poison player debuff effects.
	* Some pirate morph skills and morph items now work.
	* Fixed magic attack being buffed when a summon is spawned.
	* Any buff source (item or skill) that shares at least one of the same
	effects as a buff that has just been casted will be canceled.
	* Fixed false positive infractions when using Power Guard.

2012-12-15  GoldenKevin  (revision 184)

	* Refactored quest triggers in GameCharacter to reduce nesting and primitive
	value (un)boxing. Removed redundant loop in itemCountChanged and fixed
	missed call to completableQuests.remove(quest) in questStatusChanged.
	* Refactored change quest status methods in GameCharacter to eliminate
	instantiation and initialization (loop) of a temporary Map.
	* A mob kill now advances the progress of a quest for everyone in the party.

2013-01-05  GoldenKevin  (revision 185)

	* Quests will not complete or start if players do not have enough inventory
	space to receive an item.
	* Quest start and completion refactoring - error messages are now given to
	players.
	* !give command gives an error if a nonexistent item is entered.
	* Fixed "existent" typos.

2013-01-06  GoldenKevin  (revision 186)

	* Send level up packet to map when player's level is changed through !stat 
	command.
	* Do not send job change or avatar change packets back to client that had
	their job or avatar changed.
	* `mapmemory` table now stores spawn points. GameCharacter methods and
	script bindings updated accordingly.
	* Added "free market" and "happyville" to list of warpable maps for the
	!town command.
	* Added !jail command.
	* Accumulate infractions if a player tries replenishing HP without a pause
	after flinching (attacking, getting hurt, or casting skills) or moving.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.